--- a/sass/containers/_containers.scss
+++ b/sass/containers/_containers.scss
@@ -77,6 +77,21 @@ body {
   height: 80vh;
 }
 
+.item-image {
+  //background-color: gray;
+  width: 100%;
+  height: 200px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.item-title {
+  //background-color: #777777;
+  height: 5em;
+  overflow: hidden;
+}
+
 /*
  * OVERLAY
  *
