Getting overlay to work

--- a/sass/containers/_containers.scss
+++ b/sass/containers/_containers.scss
@@ -18,6 +18,10 @@ html {
 
 body {
   position: relative;
+  //background-color: red;
+  margin: 0;
+  height: 100%;
+  //min-height: 100vh;
 }
 
 .main-container {
