--- a/sass/containers/_containers.scss
+++ b/sass/containers/_containers.scss
@@ -4,7 +4,7 @@
 
 header {
   width: 100%;
-  padding-top: 1px;
+  padding: 1px 0 1em;
   background-color: #fff;
   -webkit-box-shadow: 0px 3px 5px 0px rgba(214,214,214,1);
   -moz-box-shadow: 0px 3px 5px 0px rgba(214,214,214,1);
@@ -49,6 +49,7 @@ body {
 
 .search__form__input {
   font-size: 16pt;
+  border: solid 1px black;
 }
 
 /*
