--- a/sass/containers/_grid.scss
+++ b/sass/containers/_grid.scss
@@ -14,7 +14,7 @@ $pad: 20px;
 
 [class*='col-'] {
   float: left;
-  padding-right: $pad;
+  //padding-right: $pad;
   .grid &:last-of-type {
     padding-right: 0;
   }
